--- a/CommandCenter/Engine/src.csproj
+++ b/CommandCenter/Engine/src.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Unit.cs" />
-    <Compile Include="Formulas.cs" />
+    <Compile Include="Experience.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="World.cs" />
