--- a/CommandCenter/Engine/src.csproj
+++ b/CommandCenter/Engine/src.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Items\Weapon.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Events\MessageEventArgs.cs" />
+    <Compile Include="Monster.cs" />
     <Compile Include="Unit.cs" />
     <Compile Include="Experience.cs" />
     <Compile Include="Player.cs" />
