--- a/CommandCenter/Engine/src.csproj
+++ b/CommandCenter/Engine/src.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Items\Inventory.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Items\InventoryItem.cs" />
     <Compile Include="Items\Weapon.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Events\MessageEventArgs.cs" />
